@@ -191,6 +191,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #22389: Add contextlib.redirect_stderr().
+
 - Issue #21356: Make ssl.RAND_egd() optional to support LibreSSL. The
   availability of the function is checked during the compilation. Patch written
   by Bernard Spil.
